feat: Enhance chat functionality and user management
- Updated SecurityConfig to allow WebSocket connections.
- Modified WebSocketConfig to support user destinations.
- Refactored ChatController to create direct and group chats for users.
- Introduced UserController for fetching user details by ID.
- Added CreateDirectChatRequest and CreateGroupChatRequest DTOs for chat creation.
- Updated CalendarEntryDto, EmployeeDto, LeaveRequestDto, ManagerDto, RequestDto, TaskAssignmentDto, TaskDto, and UserDto to use @Data annotation for cleaner code.
- Implemented CustomAccessDeniedException for better access control handling.
- Refactored RequestEventPublisher to send events to specific users.
- Created AbstractSecuredService to centralize security-related methods for services.
- Refactored ChatServiceImple to utilize security checks and improve chat creation logic.
- Enhanced RequestServiceImple to enforce security on request creation and retrieval.
- Updated TaskAssignmentServiceImple to ensure only managers can create assignments and employees can view their own assignments.
- Refactored TaskServiceImple to enforce manager-only task creation and access.
- Implemented UserServiceImple to retrieve user details based on their role.